--- a/static/css/desktop.css
+++ b/static/css/desktop.css
@@ -28,3 +28,41 @@ x  width:64px;
   background-image:url("http://cdn.iconfinder.net/data/icons/aquaticus/60%20X%2060/feed.png") !important;
   background-repeat:no-repeat;
 }
+
+/* YOUTUBE PLAYER
+**************************************************/
+
+.icon-youtubeplayer-16 {
+  background-image:url("http://cdn.iconfinder.net/data/icons/aquaticus/16%20X%2016/youtube.png") !important;
+  background-repeat:no-repeat;
+}
+
+.icon-youtubeplayer-64 {
+  background-image:url("http://cdn.iconfinder.net/data/icons/aquaticus/60%20X%2060/youtube.png") !important;
+  background-repeat:no-repeat;
+}
+
+/* DESKTOP VIEW
+**************************************************/
+
+.x-desktop-view-cell {
+    height:100px;
+    width:100px;
+    vertical-align:top;
+    opacity:0.9;
+    border:1px solid black;
+}
+.x-desktop-view-cell-over {
+    opacity:1;
+}
+
+.x-desktop-view-cell div {
+    padding-top:78px;
+    text-align:center;
+    background-position:50% 12px;
+}
+
+.x-desktop-view-cell a {
+    height:20px;
+    font:14px arial,tahoma,verdana,helvetica;
+}
