--- a/static/js/modules/Ext.ux.YoutubePlayer/src/resources/css/ext-ux-youtubeplayer-control.css
+++ b/static/js/modules/Ext.ux.YoutubePlayer/src/resources/css/ext-ux-youtubeplayer-control.css
@@ -1,26 +1,26 @@
 
 .ext-ux-youtubeplayer-control .play {
-    background-image:url(../images/control_play_blue.png) !important;
+    background-image:url(../images/control_play.png) !important;
 }
 
 .ext-ux-youtubeplayer-control .eject {
-    background-image:url(../images/control_eject_blue.png) !important;
+    background-image:url(../images/control_eject.png) !important;
 }
 
 .ext-ux-youtubeplayer-control .stop {
-    background-image:url(../images/control_stop_blue.png) !important;
+    background-image:url(../images/control_stop.png) !important;
 }
 
 .ext-ux-youtubeplayer-control .pause {
-    background-image:url(../images/control_pause_blue.png) !important;
+    background-image:url(../images/control_pause.png) !important;
 }
 
 .ext-ux-youtubeplayer-control .start {
-    background-image:url(../images/control_start_blue.png) !important;
+    background-image:url(../images/control_start.png) !important;
 }
 
 .ext-ux-youtubeplayer-control .end {
-    background-image:url(../images/control_end_blue.png) !important;
+    background-image:url(../images/control_end.png) !important;
 }
 
 .ext-ux-youtubeplayer-control .quality {
@@ -28,15 +28,15 @@
 }
 
 .ext-ux-youtubeplayer-control-muteIcon {
-    background-image:url(../images/sound_mute.png) !important;
+    background-image:url(../images/speaker_mute.png) !important;
 }
 
 .ext-ux-youtubeplayer-control-volumeIcon {
-    background-image:url(../images/sound_none.png) !important;
+    background-image:url(../images/speaker.png) !important;
 }
 
 .ext-ux-youtubeplayer-control-slider .hbar {
-    border: solid 1px #B5B8C8;
+x    border: solid 1px #B5B8C8;
     background-color: white;
     background-image:url(../images/youtubeplayer-slider-progress.png);
     background-position:-1280px 0;
