--- a/static/css/desktop.css
+++ b/static/css/desktop.css
@@ -119,17 +119,7 @@ x  width:64px;
     font-size:11px;
     text-align:left;
 }
-/*
-.x-desktop-youtubesearch-item table {
-    width:100%;
-    border-collapse:collapse;
-}
 
-.x-desktop-youtubesearch-item td {
-    color:#666666;
-    font-size:11px;
-}
-*/
 /* DESKTOP VIEW
 **************************************************/
 
@@ -153,4 +143,17 @@ x  width:64px;
 .x-desktop-view-cell a {
     height:20px;
     font:14px arial,tahoma,verdana,helvetica;
+}
+
+/* FILE BROWSER
+**************************************************/
+
+.icon-filebrowser-16 {
+  background-image:url("http://cdn.iconfinder.net/data/icons/crystalproject/16x16/filesystems/folder_blue.png") !important;
+  background-repeat:no-repeat;
+}
+
+.icon-filebrowser-64 {
+  background-image:url("http://cdn.iconfinder.net/data/icons/crystalproject/64x64/filesystems/folder_documents.png") !important;
+  background-repeat:no-repeat;
 }
