--- a/static/css/desktop.css
+++ b/static/css/desktop.css
@@ -3,17 +3,28 @@
 
 .x-dsk-icon-img {
   height:64px;
-x  width:64px;
   background-position:center;
 }
 
 .x-dsk-icon-name {
   height:16px;
-x  width:64px;
   font-size:13px;
   padding:2px;
   text-align:center;
   font-family:arial,tahoma,verdana,helvetica;
+}
+
+/* DOCUMENTS
+**************************************************/
+
+.icon-documents-16 {
+  background-image:url("http://cdn.iconfinder.net/data/icons/ellegant/16x16/8.png") !important;
+  background-repeat:no-repeat;
+}
+
+.icon-documents-64 {
+  background-image:url("http://cdn.iconfinder.net/data/icons/ellegant/64x64/7.png") !important;
+  background-repeat:no-repeat;
 }
 
 /* CONTACTS
